--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <script src="main.js"></script>
-    <script src="test.js"></script>
+    <script src="scripts/main.js"></script>
+    <script src="scripts/test.js"></script>
 </body>
 </html>
