With more classes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
             </div>
         </div>
     </div>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/data.js"></script>
+    <script src="scripts/default_setting.js"></script>
+    <script src="scripts/btn_addevent.js"></script>       
+    <script src="scripts/main.js"></script>    
     <script src="scripts/test.js"></script>
 </body>
 </html>
