Made changed to CSS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="container">
             <h2>表示される市のある都道府県を選んでね</h1>
-            <div class="quiz">ここに都市名が表示されます</div>
+            <div class="quiz"></div>
             <form class="form">
                 <label><input type="radio" name="op" value="osaka">大阪</label>
                 <label><input type="radio" name="op" value="kyoto">京都</label>
