--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="関西の市町村名から、その県名を答える学習ツールです。">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>関西市町村クイズ</title>
 </head>
 <body>
     <div class="global-container">
@@ -30,7 +31,7 @@
         </div>
         <div class="container">
             <div class="question_cnt"><span class="current_qeuestion">0</span> / <span class="total_questions"></span>問</div>
-            <h2>表示される市のある都道府県を選んでね</h1>
+            <h2>表示される場所のある都道府県を選んでね</h1>
             <div class="quiz"></div>
             <form class="form">
                 <div><label><input type="radio" name="op" value="osaka">大阪</label></div>
