--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="関西の市町村名から、その県名を答える学習ツールです。">
+    <meta property="og:url" content="https://superb-tartufo-a1ae25.netlify.app/">
+    <meta property="og:title" content="関西市町村クイズ">
+    <meta property="og:description" content="関西の市町村名から、その県名を答える学習ツールです。">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="img/IMG_1282.JPG">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
